testsuite/tests/grammar/invalid_lexers/token_name.lkt
from common import Example

lexer foo_lexer {
    Example <- "example"
    Example <- "null"
}
